--- a/colStore.properties
+++ b/colStore.properties
@@ -1,7 +1,7 @@
 #Database Credentials
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_USER=user1
-DB_PASSWORD=pass
+DB_USER=<user>
+DB_PASSWORD=<password>
 DB_DATABASE=travel
 #DB_SSL=1
